5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1863_3219.log
== TEST (2019-07-02 11:26:03) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=float)
for i in range(shape(m)[0]):
	for j in range(shape(m[1])):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:26:41) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=int)

for i in range(shape(m)[0]):
	for j in range(shape(m[1])):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:26:57) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=int)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:27:22) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=int)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:27:22) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=int)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
print(v)
-- EXECUTION TIME:
1.07666
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
17.67
---- user output:
7.6
[40 32  4  0  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.51
---- user output:
Digite: 0.0
[0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
52.44
---- user output:
Digite: 13.14
[11 22 34 66 51  0  0  0  0  0  0  0  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:28:19) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))
v = zeros(2*(shape(m)[0]+2),dtype=float)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]
aux = mean(v)
print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:35) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]
	for k in 
aux = mean(v)
print(round(aux,2))
print(v)
-- ERROR:
File "XXXX", line 12
    for k in 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:43) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]

aux = mean(v)
print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:25) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			v[j]=m[i,j]

aux = mean(v)
print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:01) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)

for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]

print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:14) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]

print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:47) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]
			print(aux)

print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:38) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]
			print(aux)
aux = aux/size(v)
print(round(aux,2))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:46) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]
			print(aux)
aux = aux/size(v)
print(round(aux,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:41:58) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]
			
aux = aux/size(v)
print(round(aux,2))

-- EXECUTION TIME:
0.964406
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
17.67
---- user output:
17.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.51
---- user output:
0.51
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
52.44
---- user output:
52.43
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:42:26) 
-- CODE:
from numpy.linalg import *
from numpy import *

m = array(eval(input("Digite: ")))

v = zeros(shape(m)[0]**2-shape(m)[0],dtype=float)
aux=0
for i in range(shape(m)[0]):
	for j in range(shape(m)[1]):
		if(i!=j):
			aux+=m[i,j]
			
aux = aux/size(v)
print(round(aux,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
